feat: register and locale
SOC-10

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "../style/animation/bounce-in.css";
-@import "../style/animation/bounce-out.css";
+@import "../../style/animation/bounce-in.css";
+@import "../../style/animation/bounce-out.css";
 
 html {
   overflow-y: scroll;
