feat: implement profile image uploading
- can upload profile image
- added alert modal which displays messages for image upload
- alert modal also displays messages for follow button

SOC-2

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -4,56 +4,9 @@
 
 @import "../../style/animation/bounce-in.css";
 @import "../../style/animation/bounce-out.css";
+@import "../../style/animation/loader.css";
+@import "../../style/animation/post.css";
 
 html {
   overflow-y: scroll;
-}
-
-.textarea {
-  height: 52px
-}
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #000;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-  }
-
-  @keyframes rotation {
-  0% {
-      transform: rotate(0deg);
-  }
-  100% {
-      transform: rotate(360deg);
-  }
-} 
-
-.post-enter {
-  transform: scaleY(0);
-  max-height: 0;
-  display: block;
-}
-.post-enter-active {
-  transform: scaleY(1);
-  max-height: 2000px;
-  display: block;
-  transform-origin: top;
-  transition: transform 0.5s ease, max-height 3s ease;
-}
-.post-exit {
-  transform: scaleY(1);    
-  max-height: 160px;
-  display: block;
-}
-.post-exit-active {
-  transform: scaleY(0);    
-  max-height: 0;
-  display: block;
-  transform-origin: top;
-  transition: transform 0.75s ease, max-height 0.75s ease;
 }
