feat: image uploading and other improvements
- style and breakpoint improvements, images for post actions
- post images
- image utils for getting image address
- fix alert animation, improve post animation

SOC-3
SOC-35

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -6,6 +6,9 @@
 @import "../../style/animation/bounce-out.css";
 @import "../../style/animation/loader.css";
 @import "../../style/animation/post.css";
+@import "../../style/animation/alert.css";
+
+@import "../../style/svg-button.css";
 
 html {
   overflow-y: scroll;
