--- a/style/animation/post.css
+++ b/style/animation/post.css
@@ -2,23 +2,27 @@
   transform: scaleY(0);
   max-height: 0;
   display: block;
+  opacity: 0;
 }
 .post-enter-active {
   transform: scaleY(1);
   max-height: 2000px;
   display: block;
   transform-origin: top;
-  transition: transform 0.5s ease, max-height 3s ease;
+  opacity: 1;
+  transition: transform 0.5s ease, opacity 1s ease, max-height 3s ease;
 }
 .post-exit {
   transform: scaleY(1);    
   max-height: 160px;
   display: block;
+  opacity: 1;
 }
 .post-exit-active {
   transform: scaleY(0);    
   max-height: 0;
+  opacity: 0;
   display: block;
   transform-origin: top;
-  transition: transform 0.75s ease, max-height 0.75s ease;
+  transition: transform 0.75s ease, opacity 0.2s ease, max-height 0.75s ease;
 }
