feat: reply from feed
- reply now in post actions, which opens reply modal
- posts now more compact
- translated most texts
- validation when posting
- left navigation menu now sticky

SOC-57

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -10,6 +10,14 @@
 
 @import "../../style/svg-button.css";
 
-html {
+body {
   overflow-y: scroll;
+}
+
+textarea {
+  outline: 0;
+}
+
+input {
+  outline: 0;
 }
