--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 @import "../style/animation/loader.css";
 @import "../style/animation/post.css";
 @import "../style/animation/alert.css";
-@import "../style/animation/appear.css";
+@import "../style/animation/message.css";
 
 @import "../style/svg-button.css";
 
