feat: chat send button animation and hide when no input value

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 @import "../style/animation/post.css";
 @import "../style/animation/alert.css";
 @import "../style/animation/message.css";
+@import "../style/animation/common.css";
 
 @import "../style/svg-button.css";
 
