--- a/style/animation/message.css
+++ b/style/animation/message.css
@@ -68,16 +68,19 @@
 }
 
 .message-slide-exit {
-	transform: translateY(0);
-	max-height: 50px;
+	max-height: 100px;
 	opacity: 1;
 	display: block;
 }
 
 .message-slide-exit-active {
-	transform: translateY(20px);
 	max-height: 0;
 	opacity: 0;
-	transition: all 0.4s ease-out;
+	transition: all 0.5s ease-out;
   transform-origin: bottom;
+}
+
+.message-slide-exit-done {
+	max-height: 0;
+	opacity: 0;
 }
