feat: chat message reactions

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import "./style/animation/alert.css";
 @import "./style/animation/message.css";
 @import "./style/animation/common.css";
+@import "./style/animation/reaction.css";
+
 
 @tailwind base;
 @tailwind components;
