--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,12 @@ input {
 :disabled {
   cursor: not-allowed;
 }
+
+.not-selectable {
+  -webkit-touch-callout : none;
+  -webkit-user-select:none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
